Testing overflow issue

--- a/default.css
+++ b/default.css
@@ -62,7 +62,7 @@ h6 { font-size: 16px;}
 	background-color: var(--mainColor);
 	border-bottom:1px solid var(--borderColor);
 	/* overflow: -moz-hidden-unscrollable; */
-	overflow: hidden;
+	overflow: auto;
 	
 }
 
@@ -70,7 +70,7 @@ h6 { font-size: 16px;}
 	background-color: var(--secondaryColor);
 	border-bottom:1px solid var(--borderColor);
 	/* overflow:hidden; */
-	overflow: hidden;
+	overflow: auto;
 }
 
 
